# praxis

./: .gitignore  Cargo.toml  README.md
.agents/skills/spec-writing-standard/: SKILL.md
.agents/skills/spec-writing-standard/agents/: openai.yaml
.agents/skills/spec-writing-standard/assets/: spec-writing-standard-template.md
.agents/skills/spec-writing-standard/scripts/: check_spec_standard.py
.agents/skills/write-spec/: SKILL.md
.agents/skills/write-spec/agents/: openai.yaml
.agents/skills/write-spec/assets/: spec-template.md
.agents/skills/write-spec/references/: spec-writing-guide.md
.agents/skills/write-spec/scripts/: check_spec.py
apps/praxis-desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/praxis-desktop/src/: App.svelte  app.css
apps/praxis-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/praxis-desktop/src-tauri/capabilities/: default.json
apps/praxis-desktop/src-tauri/icons/: icon.icns
apps/praxis-desktop/src-tauri/src/: lib.rs  main.rs
apps/praxis-desktop/src/lib/: api.ts  starterSources.ts  types.ts
crates/praxis-cli/: Cargo.toml
crates/praxis-cli/src/: main.rs
crates/praxis-core/: Cargo.toml
crates/praxis-core/src/: agent_files.rs  create.rs  evaluation.rs  executor.rs  guidance.rs  jobs.rs  lib.rs  library.rs  manager.rs  model.rs  parser.rs  recipes.rs  source.rs  workspace.rs
crates/praxis-core/tests/: live_codex_runtime.rs  user_scenarios.rs
docs/: CODEX_RUNTIME_E2E.md  PRAXIS_REPOSITORY_ANALYSIS.md  PRAXIS_SPEC_WRITING_STANDARD.md
examples/: composable-skills.skills.deck.json  manifest.repo.sample.toml
examples/sources/demo-cards/: AGENTS.md  CLAUDE.md  skills.deck.json
examples/sources/demo-cards/debug-root-cause/: SKILL.md
examples/sources/demo-cards/plan-cleanly/: SKILL.md
examples/sources/demo-cards/ship-checklist/: SKILL.md
examples/sources/demo-cards/workflow-build-release/: SKILL.md
plans/: IMPLEMENTATION-PLAN.md  PRAXIS_FINAL_FORM_REFINEMENT.md  PRAXIS_FINAL_SPEC.md  PRAXIS_REPO_REAUDIT_1A24E43.md  PRAXIS_SPEC_METHOD_COMPARISON_VS_SYMPHONY.md  TASKS.md
scripts/: package-source.sh  release-cli.sh  release-macos.sh  run_live_codex_runtime_e2e.sh
specs/: 00-HANDOFF.md  01-PHILOSOPHY.md  02-BLUEPRINT.md  03-SPEC.md  04-RUNTIME-TARGET-PROFILES.md  05-REPOSITORY-CONTRACTS.md  06-CREATION-SYSTEM.md  07-UX-IA.md  08-DISTRIBUTION.md  99-REFERENCES.md  README.md
(+10 files in other folders)
