[workspace]
members = [
  "crates/praxis-core",
  "crates/praxis-cli",
  "apps/praxis-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["OpenAI + ax"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
codex-runtime = "0.5.0"
dirs = "6.0"
flate2 = "1.0"
hex = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2.0" }
tauri-build = { version = "2.0" }
tempfile = "3.13"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
