[package]
name = "praxis-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "praxis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
praxis-core = { path = "../../../crates/praxis-core" }
tauri-plugin-dialog = "2"
